Upt: Moved table border-collapse from optionnal to basic fixs

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,3 +24,7 @@ img {
 	height: auto;
 	max-width: 100%;
 }
+
+table {
+	border-collapse: collapse;
+}
