--- a/assets/css/optional-layout-and-stuff.css
+++ b/assets/css/optional-layout-and-stuff.css
@@ -30,7 +30,6 @@
   }
 
 .table {
-  border-collapse: collapse;
   margin-bottom: 1.5em;
 }
   .table th {
